fix: vote buttons collapse when using Show vote buttons on the left, Settings page width when using Resize Feed/Post

--- a/src-webpack/src/common/content_first/RE_styles.css
+++ b/src-webpack/src/common/content_first/RE_styles.css
@@ -292,6 +292,7 @@ article:has(> .re-vote-panel) {
 	flex-direction: column;
 	background-color: transparent;
 	color: var(--button-color-text-default);
+	height: revert;
 }
 .re-vote-panel button[upvote],
 .re-vote-panel button[downvote] {
